--- a/pages/programa/index.html
+++ b/pages/programa/index.html
@@ -107,7 +107,7 @@
       </tr>
 
       <tr>
-          <td>16.10-17.30</td>
+          <td>16.10-18.10</td>
         <td>Coloquio</td>
         <td>
             <strong> Buscando una vinculación efectiva: ¿Es posible diseñar y trasladar una nueva molécula en México?</strong><br />
@@ -132,7 +132,7 @@
       </tr>
 
       <tr>
-        <td>17.40-18.25</td>
+        <td>18.10-18.25</td>
         <td>Turno de participación abierta</td>
         <td>
             <strong>Propuestas, conclusiones y clausura.</strong><br />
@@ -147,7 +147,7 @@
 
       <tr>
           <td>18.30</td>
-          <td>Brindis de clausura</td>
+          <td>Clausura - Vino de Honor</td>
       </tr>
 
     </tbody>
