Nikola auto commit.
Source commit: 46ad83cc56d13070d559398393a02bd69912c25a
Nikola version: 7.8.9

--- a/programa/index.html
+++ b/programa/index.html
@@ -179,13 +179,14 @@
 </td>
       </tr>
 <tr>
-<td>16.10-17.30</td>
+<td>16.10-18.10</td>
         <td>Coloquio</td>
         <td>
             <strong> Buscando una vinculación efectiva: ¿Es posible diseñar y trasladar una nueva molécula en México?</strong><br><br>
-            Participantes:<br><strong>
+            Participantes (Laboratorios socios de la fundación INCIDE):<br><strong>
             <a href="../invitados/senosiain-pelaez/">
                 Dr. Juan Pablo Senosiain, Laboratorios Senosiain.</a><br>
+                Dra. Myriam Cortés Fuentes, Laboratorios Carnot. <br>
                 Dr. Jorge González Canudas, Laboratorios Silanes.<br>
                 Dr. Sergio Valentinotti Marelli, Laboratorios Liomont.<br></strong>
             <br>
@@ -199,7 +200,7 @@
 </td>
       </tr>
 <tr>
-<td>17.40-18.25</td>
+<td>18.10-18.25</td>
         <td>Turno de participación abierta</td>
         <td>
             <strong>Propuestas, conclusiones y clausura.</strong><br><br>
@@ -212,7 +213,7 @@
       </tr>
 <tr>
 <td>18.30</td>
-          <td>Brindis de clausura</td>
+          <td>Clausura - Vino de Honor</td>
       </tr>
 </tbody></table>
 </div>
