--- a/invitados/index.html
+++ b/invitados/index.html
@@ -332,6 +332,30 @@ En orden de aparición
             </div>
         </div>
 
+        <div class="panel-body" style="height: 236px;">
+            <div class="col-md-3">
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <img src="../images/icon_person.png" style="height:180px;">
+</center>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div class="panel panel-default" style="height: 210px;">
+                    <div class="panel-body">
+                        <center>
+                            <h3>Dra. Myriam Cortés Fuentes</h3>
+                            <h5>Directora de Investigación y Desarrollo</h5>
+                            <h5>Laboratorios Carnot</h5>
+                        </center>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 </div>
 
