--- a/pages/programa/index.html
+++ b/pages/programa/index.html
@@ -135,9 +135,8 @@
         <td>18.10-18.25</td>
         <td>Turno de participación abierta</td>
         <td>
-            <strong>Propuestas, conclusiones y clausura.</strong><br />
+            <strong>Conclusiones.</strong><br />
             <br />
-        Durante el turno de participación abierta se procurarán abordar, entre otras, las siguientes cuestiones:<br />
         - ¿Qué problemas tenemos como comunidad y qué estrategias de resolución podríamos abordar en común?<br />
         - ¿Cómo podemos relacionarnos para orientar y acelerar el diseño y descubrimiento de fármacos en México?<br />
         </td>
