Nikola auto commit.
Source commit: 36b697aaaf367735e11a6f56e9649c15a3af4d3b
Nikola version: 7.8.9

--- a/programa/index.html
+++ b/programa/index.html
@@ -203,8 +203,7 @@
 <td>18.10-18.25</td>
         <td>Turno de participación abierta</td>
         <td>
-            <strong>Propuestas, conclusiones y clausura.</strong><br><br>
-        Durante el turno de participación abierta se procurarán abordar, entre otras, las siguientes cuestiones:<br>
+            <strong>Conclusiones.</strong><br><br>
         - ¿Qué problemas tenemos como comunidad y qué estrategias de resolución podríamos abordar en común?<br>
         - ¿Cómo podemos relacionarnos para orientar y acelerar el diseño y descubrimiento de fármacos en México?<br>
 </td>
