--- a/pages/programa/index.html
+++ b/pages/programa/index.html
@@ -133,9 +133,9 @@
 
       <tr>
         <td>18.10-18.25</td>
-        <td>Turno de participación abierta</td>
+        <td>Clausura</td>
         <td>
-            <strong>Conclusiones.</strong><br />
+            <strong>Conclusiones al workshop</strong><br />
             <br />
         - ¿Qué problemas tenemos como comunidad y qué estrategias de resolución podríamos abordar en común?<br />
         - ¿Cómo podemos relacionarnos para orientar y acelerar el diseño y descubrimiento de fármacos en México?<br />
