Corrección segundo apellido jp senosiain

--- a/pages/programa/index.html
+++ b/pages/programa/index.html
@@ -115,7 +115,7 @@
             Participantes (Laboratorios socios de la fundación INCIDE):<br />
             <strong>
             <a href="/invitados/senosiain-pelaez/">
-                Dr. Juan Pablo Senosiain, Laboratorios Senosiain.</a><br />
+                Dr. Juan Pablo Senosiain Peláez, Laboratorios Senosiain.</a><br />
                 Dra. Myriam Cortés Fuentes, Laboratorios Carnot. <br />
                 Dr. Jorge González Canudas, Laboratorios Silanes.<br />
                 Dr. Sergio Valentinotti Marelli, Laboratorios Liomont.<br />
