Nikola auto commit.
Source commit: 35c1c56ab97ecef516868254b2b38fefd9926c5b
Nikola version: 7.8.9

--- a/programa/index.html
+++ b/programa/index.html
@@ -183,7 +183,7 @@
         <td>Coloquio</td>
         <td>
             <strong> Buscando una vinculación efectiva: ¿Es posible diseñar y trasladar una nueva molécula en México?</strong><br><br>
-            Participantes (Laboratorios socios de la fundación INCIDE):<br><strong>
+            Participantes (Laboratorios socios de la <a href="http://incide.mx/" fundaci incide></a>):<br><strong>
             <a href="../invitados/senosiain-pelaez/">
                 Dr. Juan Pablo Senosiain Peláez, Laboratorios Senosiain.</a><br>
                 Dra. Myriam Cortés Fuentes, Laboratorios Carnot. <br>
