--- a/pages/programa/index.html
+++ b/pages/programa/index.html
@@ -112,7 +112,7 @@
         <td>
             <strong> Buscando una vinculación efectiva: ¿Es posible diseñar y trasladar una nueva molécula en México?</strong><br />
             <br />
-            Participantes (Laboratorios socios de la <a href="http://incide.mx/" fundación INCIDE<a/>):<br />
+            Participantes (Laboratorios socios de la <a href="http://incide.mx/">fundación INCIDE<a/>):<br />
             <strong>
             <a href="/invitados/senosiain-pelaez/">
                 Dr. Juan Pablo Senosiain Peláez, Laboratorios Senosiain.</a><br />
