Nikola auto commit.
Source commit: 124244e2374ac3f295b2bf95e785a96cbcca71b7
Nikola version: 7.8.9

--- a/invitados/index.html
+++ b/invitados/index.html
@@ -177,7 +177,7 @@ En orden de aparición
                             <h3> Dr. José Luis Medina Franco </h3>
                             <h5> <a href="https://www.difacquim.com/">Laboratorio DIFACQUIM: Diseño de Fármacos Asistido por Computadora.</a>
 </h5>
-                            <h5> Facultad de Química, Universidad Nacional Autonoma de México.</h5>
+                            <h5> Facultad de Química, Universidad Nacional Autónoma de México.</h5>
                             <h5> <i> <a href="medina-franco/"> Semblanza Curricular </a></i>
 </h5>
                         </center>
