--- a/pages/index.html
+++ b/pages/index.html
@@ -100,17 +100,31 @@
 <hr />
 <h1><strong>Patrocinan</strong></h1>
 <div class="row">
-    <div class="col-md-6" style="margin-top: 4em; margin-bottom: 4em;">
+    <div class="col-md-4" style="margin-top: 4em; margin-bottom: 4em;">
+    </div>
+    <div class="col-md-4" style="margin-top: 4em; margin-bottom: 4em;">
         <a href="http://malvernpanalytical.com/" style="color:inherit; text-decoration:none" >
-            <img class='img-responsive' src="images/logos/patrocinadores/LogoMalvernPanalytical.jpg" style="width:60%;">
+            <img class='img-responsive' src="images/logos/patrocinadores/LogoMalvernPanalytical.jpg" style="width:80%;">
         </a>
     </div>
-    <div class="col-md-6" style="margin-top: 4em; margin-bottom: 4em;">
+    <div class="col-md-4" style="margin-top: 4em; margin-bottom: 4em;">
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-4" style="margin-top: 4em; margin-bottom: 4em;">
         <a href="https://www.ctr.com.mx/" style="color:inherit; text-decoration:none" >
-            <img class='img-responsive' src="images/logos/patrocinadores/logoctr.jpg" style="width:55%;">
+            <img class='img-responsive' src="images/logos/patrocinadores/logoctr.jpg" style="width:75%;">
+        </a>
+    </div>
+    <div class="col-md-4" style="margin-top: 4em; margin-bottom: 4em;">
+    </div>
+    <div class="col-md-4" style="margin-top: 4em; margin-bottom: 4em;">
+        <a href="http://www.aspelab.com/aspe/" style="color:inherit; text-decoration:none" >
+            <img class='img-responsive' src="images/logos/patrocinadores/Aspelab.jpg" style="width:75%;">
         </a>
     </div>
 </div>
+
 
 
 
