--- a/pages/index.html
+++ b/pages/index.html
@@ -30,46 +30,45 @@
 <hr />
 
 <div class="row" style="margin-top: 2em; margin-bottom: 2em;">
-<a href="/registro/">
 <h1>
-    <b>¡Regístrate ya!</b><br />
+    <b>¡Aforo Completo!</b><br />
 </h1>
-<h3>
-    La asistencia es gratuita. <br />
-    <h4> Aforo limitado a 120 participantes.</h4>
-</h3>
-</a>
+
+<div class="row" style="margin-top: 2em; margin-bottom: 2em;">
+    <a href="/documentacion/brochure.pdf">
+        <h2>
+            <b>Brochure oficial del workshop</b><br />
+        </h2>
+        <h4>
+            Descárgalo aquí.
+        </h4>
+    </a>
 </div>
 
-<div class="md-2" style="margin-top: 1em; margin-bottom: 1em;">
 
+<div class="md-2" style="margin-top: 1em; margin-bottom: 1em;">
     <a href="http://himfg.com.mx/" style="color:inherit; text-decoration:none" >
         <img class='img-responsive' src="galleries/Logo_HIMFG.jpg" style="width:20%;">
     </a>
 </div>
 
 
-<div class="row" style="margin-top: 2em; margin-bottom: 2em;">
+
+<div class="md-1" style="margin-top: 3em; margin-bottom: 3em;">
 <h4>
+   </br>
     Si no puedes venir <a href="/blog/workshop-directo-streaming/">sigue el workshop en streaming</a> gracias a <a href="http://cemesatel.tv/">CEMESATEL</a><br />
     y <a href="/blog/preguntas-twitter/">toma el micrófono de la sala</a> usando el hashtag <a href="https://twitter.com/search?q=%23d3mexico&ref_src=twsrc%5Etfw&ref_url=http%3A%2F%2Fwww.d3mexico.org%2F">#d3mexico en twitter</a>. <br />
-    <strong>¡Estate atento!</strong> Publicaremos aquí mismo el enlace.
+    <br />
+    Retransmisión en abierto visitando cualquiera de los siguientes dos enlates:<br />
+    <strong><a href="http://cemesatel.tv/">Web de Cemesatel</a> </strong><br />
+    <strong><a href="https://www.youtube.com/channel/UCnMQE9PS0qxkmUqYQg9_DQA">Canal Youtube de Cemesatel</a> </strong>
 </h4>
 </div>
 
-
-
-<div class="row" style="margin-top: 2em; margin-bottom: 2em;">
-<a href="/documentacion/brochure.pdf">
-<h2>
-    <b>Brochure oficial del workshop</b><br />
-</h2>
-<h4>
-    Descárgalo aquí.
-</h4>
-</a>
+<div class="md-1" style="margin-top: 3em; margin-bottom: 3em;">
+    <iframe width="560" height="340" src="https://www.youtube.com/embed/bjXnD3oaFTg"> </iframe>
 </div>
-
 
 <hr />
 
@@ -104,7 +103,7 @@
     </div>
     <div class="col-md-4" style="margin-top: 4em; margin-bottom: 4em;">
         <a href="http://malvernpanalytical.com/" style="color:inherit; text-decoration:none" >
-            <img class='img-responsive' src="images/logos/patrocinadores/LogoMalvernPanalytical.jpg" style="width:80%;">
+            <img class='img-responsive' src="images/logos/patrocinadores/LogoMalvernPanalytical.jpg" style="width:90%;">
         </a>
     </div>
     <div class="col-md-4" style="margin-top: 4em; margin-bottom: 4em;">
@@ -113,14 +112,14 @@
 <div class="row">
     <div class="col-md-4" style="margin-top: 4em; margin-bottom: 4em;">
         <a href="https://www.ctr.com.mx/" style="color:inherit; text-decoration:none" >
-            <img class='img-responsive' src="images/logos/patrocinadores/logoctr.jpg" style="width:75%;">
+            <img class='img-responsive' src="images/logos/patrocinadores/logoctr.jpg" style="width:85%;">
         </a>
     </div>
     <div class="col-md-4" style="margin-top: 4em; margin-bottom: 4em;">
     </div>
     <div class="col-md-4" style="margin-top: 4em; margin-bottom: 4em;">
         <a href="http://www.aspelab.com/aspe/" style="color:inherit; text-decoration:none" >
-            <img class='img-responsive' src="images/logos/patrocinadores/Aspelab.jpg" style="width:75%;">
+            <img class='img-responsive' src="images/logos/patrocinadores/Aspelab.jpg" style="width:85%;">
         </a>
     </div>
 </div>
