Nikola auto commit.
Source commit: 0fa0ae47568a589effa6f31fab77ca12e14054ea
Nikola version: 7.8.9

--- a/programa/index.html
+++ b/programa/index.html
@@ -140,7 +140,7 @@
 <td>11.15-12.00</td>
         <td>Conferencia 2</td>
         <td>
-<strong>Applications of chemoinformatics and molecular modeling for epigenetic drug discovery.</strong><br><a href="../invitados/medina-franco/">
+<strong>Open resources for chemical space and global diversity analysis of compound databases.</strong><br><a href="../invitados/medina-franco/">
             Dr. José Luis Medina Franco.<br><i>Laboratorio DIFACQUIM: Diseño de Fármacos Asistido por Computadora.<br>
                 Facultad de Química, Universidad Nacional Autonoma de México.</i></a>
 </td>
