--- a/pages/programa/index.html
+++ b/pages/programa/index.html
@@ -26,16 +26,22 @@
     <tbody>
 
       <tr>
-        <td>9.00-9.15</td>
+        <td>9.00-9.25</td>
         <td>Apertura y bienvenida</td>
-        <td><strong>How Mexican researchers can contribute to the discovery and/or development of molecular solutions?</strong><br />
+        <td><strong>Bienvenida:</strong> <br />
+            Dr. José Alberto García Aranda, Dir. General HIMFG;<br />
+            Dr. Juan Garduño Espinosa, Dir. Investigación HIMFG;<br />
+            Dr. Jaime Nieto Zermeño, Dir. Médico HIMFG;<br />
+            Dra. Rebeca Gómez Chico Velasco, Dir. Enseñanza y Desarrollo Académico.<br />
+            <br />
+        <strong>How Mexican researchers can contribute to the discovery and/or development of molecular solutions?</strong><br />
             Dr. Diego Prada Gracia.<br />
             <i> Unidad de Investigación en Biología Computacional y Diseño de Fármacos.<br />
                 Hospital Infantil de México Federico Gómez</i></td>
       </tr>
 
       <tr>
-        <td>9.15-10.00</td>
+        <td>9.25-10.10</td>
         <td>Conferencia Invitada</td>
         <td><strong>Protein-protein interactions in the membrane: a pharmacological target.</strong> [<a href="/programa/charbel-maroun/">Abstract</a>]<br />
             <a href="/invitados/charbel-maroun/">
@@ -45,7 +51,7 @@
       </tr>
 
       <tr>
-        <td>10.10-10.55</td>
+        <td>10.20-11.05</td>
         <td>Conferencia 1</td>
         <td><strong>Drug Discovery from a biochemist point of view: do we understand protein dynamics?</strong><br />
             <a href="/invitados/dominguez-ramirez/">
@@ -55,7 +61,7 @@
       </tr>
 
       <tr>
-        <td>10.55-11.15</td>
+        <td>11.05-11.15</td>
         <td>Receso para el café</td>
         <td></td>
       </tr>
@@ -63,7 +69,7 @@
       <tr>
         <td>11.15-12.00</td>
         <td>Conferencia 2</td>
-        <td><strong>Applications of chemoinformatics and molecular modeling for epigenetic drug discovery.</strong><br />
+        <td><strong>Open resources for chemical space and global diversity analysis of compound databases.</strong><br />
             <a href="/invitados/medina-franco/">
             Dr. José Luis Medina Franco.<br />
             <i>Laboratorio DIFACQUIM: Diseño de Fármacos Asistido por Computadora.<br />
