Nikola auto commit.
Source commit: 666c719c54e02edfbb6e625fc4e98c367eacbdb5
Nikola version: 7.8.9

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
    
     Si no puedes venir <a href="blog/workshop-directo-streaming/">sigue el workshop en streaming</a> gracias a <a href="http://cemesatel.tv/">CEMESATEL</a><br>
     y <a href="blog/preguntas-twitter/">toma el micrófono de la sala</a> usando el hashtag <a href="https://twitter.com/search?q=%23d3mexico&amp;ref_src=twsrc%5Etfw&amp;ref_url=http%3A%2F%2Fwww.d3mexico.org%2F">#d3mexico en twitter</a>. <br><br>
-    Retransmisión en abierto visitando cualquiera de los siguientes dos enlates:<br><strong><a href="http://cemesatel.tv/">Web de Cemesatel</a> </strong><br><strong><a href="https://www.youtube.com/channel/UCnMQE9PS0qxkmUqYQg9_DQA">Canal Youtube de Cemesatel</a> </strong>
+    Retransmisión en abierto visitando cualquiera de los siguientes dos enlaces:<br><strong><a href="http://cemesatel.tv/">Web de Cemesatel</a> </strong><br><strong><a href="https://www.youtube.com/channel/UCnMQE9PS0qxkmUqYQg9_DQA">Canal Youtube de Cemesatel</a> </strong>
 </h4>
 </div>
 
