Nikola auto commit.
Source commit: b63fe14995c1bef607744e0355e4436b31d90913
Nikola version: 7.8.9

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta property="og:title" content="Drug Design and Discovery México">
 <meta property="og:url" content="http://www.d3mexico.org/">
 <meta property="og:description" content="Workshop
-    Drug Design and Discovery - México
+    Drug Design and Discovery - Mexico
 
 
     Impulsando la vinculación
@@ -93,7 +93,7 @@
     <img class="img-responsive" src="galleries/Cover.png"><center>
 <h1>
     <b>Workshop</b>
-    <b>Drug Design and Discovery - México</b>
+    <b>Drug Design and Discovery - Mexico</b>
 </h1>
 <h2>
     Impulsando la vinculación
@@ -125,7 +125,7 @@
 
 <div class="md-2" style="margin-top: 1em; margin-bottom: 1em;">
     <a href="http://himfg.com.mx/" style="color:inherit; text-decoration:none">
-        <img class="img-responsive" src="galleries/Logo_HIMFG.jpg" style="width:20%;"></a>
+        <img class="img-responsive" src="galleries/Logo_HIMFG_75.jpg" style="width:20%;"></a>
 </div>
 
 
