--- a/galleries/index.html
+++ b/galleries/index.html
@@ -96,6 +96,10 @@
 <li>
 <a href="Logo_HIMFG.jpg" class="thumbnail image-reference" title="Logo himfg">
             <img src="Logo_HIMFG.thumbnail.jpg" alt="Logo himfg"></a>
+        </li>
+<li>
+<a href="Logo_HIMFG_75.jpg" class="thumbnail image-reference" title="Logo himfg 75">
+            <img src="Logo_HIMFG_75.thumbnail.jpg" alt="Logo himfg 75"></a>
 </li>
 </ul>
 </noscript>
@@ -115,7 +119,7 @@
     moment.locale("es");
     fancydates(0, "YYYY-MM-DD HH:mm");
     </script><!-- end fancy dates --><script src="../assets/js/flowr.plugin.js"></script><script>
-jsonContent = [{"size": {"h": 296, "w": 720}, "title": "Cover", "url": "Cover.png", "url_thumb": "Cover.thumbnail.png"}, {"size": {"h": 160, "w": 720}, "title": "Logo uibcdf", "url": "Logo_UIBCDF.png", "url_thumb": "Logo_UIBCDF.thumbnail.png"}, {"size": {"h": 180, "w": 137}, "title": "Logo himfg", "url": "Logo_HIMFG.jpg", "url_thumb": "Logo_HIMFG.thumbnail.jpg"}];
+jsonContent = [{"size": {"h": 296, "w": 720}, "title": "Cover", "url": "Cover.png", "url_thumb": "Cover.thumbnail.png"}, {"size": {"h": 160, "w": 720}, "title": "Logo uibcdf", "url": "Logo_UIBCDF.png", "url_thumb": "Logo_UIBCDF.thumbnail.png"}, {"size": {"h": 180, "w": 137}, "title": "Logo himfg", "url": "Logo_HIMFG.jpg", "url_thumb": "Logo_HIMFG.thumbnail.jpg"}, {"size": {"h": 180, "w": 155}, "title": "Logo himfg 75", "url": "Logo_HIMFG_75.jpg", "url_thumb": "Logo_HIMFG_75.thumbnail.jpg"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
