logo HIMFG updated

--- a/pages/index.html
+++ b/pages/index.html
@@ -48,7 +48,7 @@
 
 <div class="md-2" style="margin-top: 1em; margin-bottom: 1em;">
     <a href="http://himfg.com.mx/" style="color:inherit; text-decoration:none" >
-        <img class='img-responsive' src="galleries/Logo_HIMFG_75.jpg" style="width:20%;">
+        <img class='img-responsive' src="galleries/Logo_HIMFG_75.png" style="width:20%;">
     </a>
 </div>
 
