Nikola auto commit.
Source commit: 62f63d10b5ac1831407dd15c42349491006f6213
Nikola version: 7.8.9

--- a/galleries/index.html
+++ b/galleries/index.html
@@ -100,6 +100,10 @@
 <li>
 <a href="Logo_HIMFG_75.jpg" class="thumbnail image-reference" title="Logo himfg 75">
             <img src="Logo_HIMFG_75.thumbnail.jpg" alt="Logo himfg 75"></a>
+        </li>
+<li>
+<a href="Logo_HIMFG_75.png" class="thumbnail image-reference" title="Logo himfg 75">
+            <img src="Logo_HIMFG_75.thumbnail.png" alt="Logo himfg 75"></a>
 </li>
 </ul>
 </noscript>
@@ -119,7 +123,7 @@
     moment.locale("es");
     fancydates(0, "YYYY-MM-DD HH:mm");
     </script><!-- end fancy dates --><script src="../assets/js/flowr.plugin.js"></script><script>
-jsonContent = [{"size": {"h": 296, "w": 720}, "title": "Cover", "url": "Cover.png", "url_thumb": "Cover.thumbnail.png"}, {"size": {"h": 160, "w": 720}, "title": "Logo uibcdf", "url": "Logo_UIBCDF.png", "url_thumb": "Logo_UIBCDF.thumbnail.png"}, {"size": {"h": 180, "w": 137}, "title": "Logo himfg", "url": "Logo_HIMFG.jpg", "url_thumb": "Logo_HIMFG.thumbnail.jpg"}, {"size": {"h": 180, "w": 155}, "title": "Logo himfg 75", "url": "Logo_HIMFG_75.jpg", "url_thumb": "Logo_HIMFG_75.thumbnail.jpg"}];
+jsonContent = [{"size": {"h": 296, "w": 720}, "title": "Cover", "url": "Cover.png", "url_thumb": "Cover.thumbnail.png"}, {"size": {"h": 160, "w": 720}, "title": "Logo uibcdf", "url": "Logo_UIBCDF.png", "url_thumb": "Logo_UIBCDF.thumbnail.png"}, {"size": {"h": 180, "w": 137}, "title": "Logo himfg", "url": "Logo_HIMFG.jpg", "url_thumb": "Logo_HIMFG.thumbnail.jpg"}, {"size": {"h": 180, "w": 178}, "title": "Logo himfg 75", "url": "Logo_HIMFG_75.jpg", "url_thumb": "Logo_HIMFG_75.thumbnail.jpg"}, {"size": {"h": 180, "w": 178}, "title": "Logo himfg 75", "url": "Logo_HIMFG_75.png", "url_thumb": "Logo_HIMFG_75.thumbnail.png"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
