--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 <div class="md-2" style="margin-top: 1em; margin-bottom: 1em;">
     <a href="http://himfg.com.mx/" style="color:inherit; text-decoration:none">
-        <img class="img-responsive" src="galleries/Logo_HIMFG_75.jpg" style="width:20%;"></a>
+        <img class="img-responsive" src="galleries/Logo_HIMFG_75.png" style="width:20%;"></a>
 </div>
 
 
@@ -135,7 +135,7 @@
    
     Si no puedes venir <a href="blog/workshop-directo-streaming/">sigue el workshop en streaming</a> gracias a <a href="http://cemesatel.tv/">CEMESATEL</a><br>
     y <a href="blog/preguntas-twitter/">toma el micrófono de la sala</a> usando el hashtag <a href="https://twitter.com/search?q=%23d3mexico&amp;ref_src=twsrc%5Etfw&amp;ref_url=http%3A%2F%2Fwww.d3mexico.org%2F">#d3mexico en twitter</a>. <br><br>
-    Retransmisión en abierto visitando cualquiera de los siguientes dos enlaces:<br><strong><a href="http://cemesatel.tv/">Web de Cemesatel</a> </strong><br><strong><a href="https://www.youtube.com/channel/UCnMQE9PS0qxkmUqYQg9_DQA">Canal Youtube de Cemesatel</a> </strong>
+    Retransmisión en abierto visitando cualquiera de los siguientes dos enlaces:<br><br><strong><a href="http://cemesatel.tv/">Web de Cemesatel</a> </strong><br><strong><a href="https://www.youtube.com/channel/UCnMQE9PS0qxkmUqYQg9_DQA">Canal Youtube de Cemesatel</a> </strong>
 </h4>
 </div>
 
