Nikola auto commit.
Source commit: f24c6cb60031d6e87b1ad2d3a70e1d711493098d
Nikola version: 7.8.9

--- a/programa/index.html
+++ b/programa/index.html
@@ -111,9 +111,7 @@
         <td>
 <strong>Bienvenida:</strong> <br>
             Dr. José Alberto García Aranda, Dir. General HIMFG;<br>
-            Dr. Juan Garduño Espinosa, Dir. Investigación HIMFG;<br>
-            Dr. Jaime Nieto Zermeño, Dir. Médico HIMFG;<br>
-            Dra. Rebeca Gómez Chico Velasco, Dir. Enseñanza y Desarrollo Académico.<br><br><strong>How Mexican researchers can contribute to the discovery and/or development of molecular solutions?</strong><br>
+            Dr. Juan Garduño Espinosa, Dir. Investigación HIMFG;<br><!-- Dr. Jaime Nieto Zermeño, Dir. Médico HIMFG;<br /> --><!-- Dra. Rebeca Gómez Chico Velasco, Dir. Enseñanza y Desarrollo Académico.<br /> --><br><strong>How Mexican researchers can contribute to the discovery and/or development of molecular solutions?</strong><br>
             Dr. Diego Prada Gracia.<br><i> Unidad de Investigación en Biología Computacional y Diseño de Fármacos.<br>
                 Hospital Infantil de México Federico Gómez</i>
 </td>
