--- a/pages/programa/index.html
+++ b/pages/programa/index.html
@@ -123,7 +123,8 @@
             <a href="/invitados/senosiain-pelaez/">
                 Dr. Juan Pablo Senosiain Peláez, Laboratorios Senosiain.</a><br />
                 Dra. Myriam Cortés Fuentes, Laboratorios Carnot. <br />
-                Dr. Jorge González Canudas, Laboratorios Silanes.<br />
+            <a href="/invitados/gonzalez-canudas/">
+                Dr. Jorge González Canudas, Laboratorios Silanes.</a><br />
                 Dr. Sergio Valentinotti Marelli, Laboratorios Liomont.<br />
             </strong>
             <br />
