Nikola auto commit.
Source commit: 298e82a6e9fbacfca4787cdd2ac59d342eea11b6
Nikola version: 7.8.9

--- a/invitados/index.html
+++ b/invitados/index.html
@@ -292,7 +292,7 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <img src="../images/icon_person.png" style="height:180px;">
+                            <img src="../images/invitados/gonzalez-canudas.png" style="height:180px;">
 </center>
                     </div>
                 </div>
@@ -303,7 +303,10 @@ En orden de aparición
                         <center>
                             <h3> Dr. Jorge González Canudas</h3>
                             <h5> Director Científico </h5>
-                            <h5> Laboratorios Silanes </h5>
+                            <h5> <a href="https://www.silanes.com.mx/">Laboratorios Silanes </a>
+</h5>
+                            <h5> <i> <a href="gonzalez-canudas/"> Semblanza Curricular </a></i>
+</h5>
                         </center>
                     </div>
                 </div>
