--- a/programa/index.html
+++ b/programa/index.html
@@ -189,8 +189,8 @@
             Participantes (Laboratorios socios de la <a href="http://incide.mx/">fundación INCIDE</a><a></a>):<br><strong>
             <a href="../invitados/senosiain-pelaez/">
                 Dr. Juan Pablo Senosiain Peláez, Laboratorios Senosiain.</a><br>
-                Dra. Myriam Cortés Fuentes, Laboratorios Carnot. <br>
-                Dr. Jorge González Canudas, Laboratorios Silanes.<br>
+                Dra. Myriam Cortés Fuentes, Laboratorios Carnot. <br><a href="../invitados/gonzalez-canudas/">
+                Dr. Jorge González Canudas, Laboratorios Silanes.</a><br>
                 Dr. Sergio Valentinotti Marelli, Laboratorios Liomont.<br></strong>
             <br>
         Durante el coloquio se procurarán abordar, entre otras, las siguientes cuestiones:<br>
