--- a/pages/index.html
+++ b/pages/index.html
@@ -103,7 +103,7 @@
     <div class="col-md-4" style="margin-top: 4em; margin-bottom: 4em;">
     </div>
     <div class="col-md-4" style="margin-top: 4em; margin-bottom: 4em;">
-        <a href="http://malvernpanalytical.com/" style="color:inherit; text-decoration:none" >
+        <a href="https://www.malvernpanalytical.com/en/" style="color:inherit; text-decoration:none" >
             <img class='img-responsive' src="images/logos/patrocinadores/LogoMalvernPanalytical.jpg" style="width:90%;">
         </a>
     </div>
