--- a/pages/invitados/index.html
+++ b/pages/invitados/index.html
@@ -149,7 +149,7 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <img src="/images/icon_person.png", style="height:180px;">
+                            <img src="/images/invitados/pacheco-gomez.jpg", style="height:180px;">
                         </center>
                     </div>
                 </div>
@@ -160,7 +160,8 @@ En orden de aparición
                         <center>
                             <h3> Dr. Raúl Pacheco Gómez </h3>
                             <h5> Application Scientist - Malvern Instruments</h5>
-                            <h5> <a href="http://www.malvernpanalitical.com"> Malvern Instruments Limited UK </a></h5>
+                            <h5> <a href="https://www.malvernpanalytical.com/en/"> Malvern Instruments Limited UK </a></h5>
+                            <h5> <i> <a href="/invitados/pacheco-gomez/"> Semblanza Curricular </a></i></h5>
                         </center>
                     </div>
                 </div>
