Nikola auto commit.
Source commit: 6de8d351be811c4f3e5d38eaea95a50a33eeac25
Nikola version: 7.8.9

--- a/galleries/index.html
+++ b/galleries/index.html
@@ -104,6 +104,10 @@
 <li>
 <a href="Logo_HIMFG_75.png" class="thumbnail image-reference" title="Logo himfg 75">
             <img src="Logo_HIMFG_75.thumbnail.png" alt="Logo himfg 75"></a>
+        </li>
+<li>
+<a href="Mapa_HIMFG.png" class="thumbnail image-reference" title="Mapa himfg">
+            <img src="Mapa_HIMFG.thumbnail.png" alt="Mapa himfg"></a>
 </li>
 </ul>
 </noscript>
@@ -123,7 +127,7 @@
     moment.locale("es");
     fancydates(0, "YYYY-MM-DD HH:mm");
     </script><!-- end fancy dates --><script src="../assets/js/flowr.plugin.js"></script><script>
-jsonContent = [{"size": {"h": 296, "w": 720}, "title": "Cover", "url": "Cover.png", "url_thumb": "Cover.thumbnail.png"}, {"size": {"h": 160, "w": 720}, "title": "Logo uibcdf", "url": "Logo_UIBCDF.png", "url_thumb": "Logo_UIBCDF.thumbnail.png"}, {"size": {"h": 180, "w": 137}, "title": "Logo himfg", "url": "Logo_HIMFG.jpg", "url_thumb": "Logo_HIMFG.thumbnail.jpg"}, {"size": {"h": 180, "w": 178}, "title": "Logo himfg 75", "url": "Logo_HIMFG_75.jpg", "url_thumb": "Logo_HIMFG_75.thumbnail.jpg"}, {"size": {"h": 180, "w": 178}, "title": "Logo himfg 75", "url": "Logo_HIMFG_75.png", "url_thumb": "Logo_HIMFG_75.thumbnail.png"}];
+jsonContent = [{"size": {"h": 296, "w": 720}, "title": "Cover", "url": "Cover.png", "url_thumb": "Cover.thumbnail.png"}, {"size": {"h": 160, "w": 720}, "title": "Logo uibcdf", "url": "Logo_UIBCDF.png", "url_thumb": "Logo_UIBCDF.thumbnail.png"}, {"size": {"h": 180, "w": 137}, "title": "Logo himfg", "url": "Logo_HIMFG.jpg", "url_thumb": "Logo_HIMFG.thumbnail.jpg"}, {"size": {"h": 180, "w": 178}, "title": "Logo himfg 75", "url": "Logo_HIMFG_75.jpg", "url_thumb": "Logo_HIMFG_75.thumbnail.jpg"}, {"size": {"h": 180, "w": 178}, "title": "Logo himfg 75", "url": "Logo_HIMFG_75.png", "url_thumb": "Logo_HIMFG_75.thumbnail.png"}, {"size": {"h": 91, "w": 180}, "title": "Mapa himfg", "url": "Mapa_HIMFG.png", "url_thumb": "Mapa_HIMFG.thumbnail.png"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
