--- a/como_llegar/index.html
+++ b/como_llegar/index.html
@@ -95,13 +95,14 @@
 
     </h2>
 </h2>
-<p>El acceso para todo asistente registrado se hará mediante la Puerta 4 ubicada sobre la Calle Dr Márquez (pin rojo sobre el mapa).</p>
+<p>El acceso para todo asistente registrado se hará mediante la Puerta 4 ubicada sobre la Calle Dr Márquez (pin rojo sobre el mapa de google y comienzo de trayecto indicado en rojo sobre el plano del hospital).</p>
 
 <h2> Ubicación del salón </h2>
 
-<!-- <p>Todas las sesiones se llevarán a cabo en los anexos A y B del edificio de enseñanza.</p> -->
+   <p>El evento se llevará a cabo en el sexto piso de la Torre de Hemato-Oncología e Investigación (edificio señalado por una flecha roja sobre el plano del hospital).</p>
 
-<p>Pendiente de confirmación</p>
+
+<h2> Mapa del área y plano del HIMFG </h2>
 
 <script>
  function myMap() {
@@ -120,16 +121,25 @@
  }
 </script><div class="panel-body" style="height: 660px;">
 <center>
-    <div class="panel panel-default" style="height: 660px;">
+    <div class="panel panel-default" style="height: 630px;">
             <div class="panel-body">
                 <center>
-                    <div id="map" style="width:100%;height:650px"></div>
+                    <div id="map" style="width:100%;height:630px"></div>
                     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMa0obIVADVD2R9fZgVhI3H5fp2MztoJc&amp;callback=myMap"></script>
 </center>
             </div>
         </div>
 </center>
 </div>
+
+<div class="panel-body" style="height: 660px; margin-top: 2em; margin-bottom: 2em;">
+                <center>
+                    <img class="img-responsive" src="../galleries/Mapa_HIMFG.png" style="width:85%;">
+</center>
+</div>
+
+
+
 
 
 <hr>
