Nikola auto commit.
Source commit: e740caae2202562d23856da0f81c74c57571e8c6
Nikola version: 7.8.9

--- a/como_llegar/index.html
+++ b/como_llegar/index.html
@@ -104,6 +104,13 @@
 
 <h2> Mapa del área y plano del HIMFG </h2>
 
+<p>
+        Hospital Infantil de México Federico Gómez. <br>
+        Torre de Hemato-Oncología e Investigación. <br>
+        Calle Dr. Márquez 162, Delegación Cuauhtémoc. <br>
+        06720, Ciudad de México, México.
+</p>
+
 <script>
  function myMap() {
 
