--- a/pages/programa/index.html
+++ b/pages/programa/index.html
@@ -107,7 +107,8 @@
         <td>15.15-16.00</td>
         <td>Conferencia 5</td>
         <td><strong>Microcalorimetry as a tool for understanding biomolecular interactions and an aid to drug design.</strong><br />
-            Dr. Raúl Pacheco Gómez. <br />
+            <a href="/invitados/pacheco-gomez/">
+                Dr. Raúl Pacheco Gómez.</a> <br />
             <i>Malvern Instruments Limited <br />
                 Application Scientist - Malvern Instruments, UK.</i></td>
       </tr>
@@ -118,6 +119,12 @@
         <td>
             <strong> Buscando una vinculación efectiva: ¿Es posible diseñar y trasladar una nueva molécula en México?</strong><br />
             <br />
+            Moderadora:<br />
+                <strong>
+                        Dra. Laura Palomares Aguilar, IBT-UNAM.<br />
+                </strong>
+                <br />
+           <br />
             Participantes (Laboratorios socios de la <a href="http://incide.mx/">fundación INCIDE<a/>):<br />
             <strong>
             <a href="/invitados/senosiain-pelaez/">
@@ -125,7 +132,8 @@
                 Dra. Myriam Cortés Fuentes, Laboratorios Carnot. <br />
             <a href="/invitados/gonzalez-canudas/">
                 Dr. Jorge González Canudas, Laboratorios Silanes.</a><br />
-                Dr. Sergio Valentinotti Marelli, Laboratorios Liomont.<br />
+            <a href="/invitados/valentinotti-marelli/">
+                Dr. Sergio Valentinotti Marelli, Laboratorios Liomont.</a><br />
             </strong>
             <br />
         Durante el coloquio se procurarán abordar, entre otras, las siguientes cuestiones:<br />
