Nikola auto commit.
Source commit: 51fa2b9502119f3a458c2d017bc28074b0e739b5
Nikola version: 7.8.9

--- a/invitados/index.html
+++ b/invitados/index.html
@@ -320,7 +320,7 @@ En orden de aparición
                 <div class="panel panel-default" style="height: 210px;">
                     <div class="panel-body">
                         <center>
-                            <img src="../images/icon_person.png" style="height:180px;">
+                            <img src="../images/invitados/valentinotti-marelli.jpg" style="height:180px;">
 </center>
                     </div>
                 </div>
@@ -331,7 +331,9 @@ En orden de aparición
                         <center>
                             <h3>Dr. Sergio Valentinotti Marelli</h3>
                             <h5>Director Life Sciences</h5>
-                            <h5>Laboratorios Liomont</h5>
+                            <h5><a href="http://liomont.com/">Laboratorios Liomont</a></h5>
+                            <h5> <i> <a href="valentinotti-marelli/"> Semblanza Curricular </a></i>
+</h5>
                         </center>
                     </div>
                 </div>
