--- a/programa/index.html
+++ b/programa/index.html
@@ -176,8 +176,8 @@
 <td>15.15-16.00</td>
         <td>Conferencia 5</td>
         <td>
-<strong>Microcalorimetry as a tool for understanding biomolecular interactions and an aid to drug design.</strong><br>
-            Dr. Raúl Pacheco Gómez. <br><i>Malvern Instruments Limited <br>
+<strong>Microcalorimetry as a tool for understanding biomolecular interactions and an aid to drug design.</strong><br><a href="../invitados/pacheco-gomez/">
+                Dr. Raúl Pacheco Gómez.</a> <br><i>Malvern Instruments Limited <br>
                 Application Scientist - Malvern Instruments, UK.</i>
 </td>
       </tr>
@@ -186,12 +186,15 @@
         <td>Coloquio</td>
         <td>
             <strong> Buscando una vinculación efectiva: ¿Es posible diseñar y trasladar una nueva molécula en México?</strong><br><br>
+            Moderadora:<br><strong>
+                        Dra. Laura Palomares Aguilar, IBT-UNAM.<br></strong>
+                <br><br>
             Participantes (Laboratorios socios de la <a href="http://incide.mx/">fundación INCIDE</a><a></a>):<br><strong>
             <a href="../invitados/senosiain-pelaez/">
                 Dr. Juan Pablo Senosiain Peláez, Laboratorios Senosiain.</a><br>
                 Dra. Myriam Cortés Fuentes, Laboratorios Carnot. <br><a href="../invitados/gonzalez-canudas/">
-                Dr. Jorge González Canudas, Laboratorios Silanes.</a><br>
-                Dr. Sergio Valentinotti Marelli, Laboratorios Liomont.<br></strong>
+                Dr. Jorge González Canudas, Laboratorios Silanes.</a><br><a href="../invitados/valentinotti-marelli/">
+                Dr. Sergio Valentinotti Marelli, Laboratorios Liomont.</a><br></strong>
             <br>
         Durante el coloquio se procurarán abordar, entre otras, las siguientes cuestiones:<br>
         - ¿Qué tipo de proyectos es pertinente desarrollar en México con la perspectiva de ser trasladados?<br>
